--- a/project1/index.html
+++ b/project1/index.html
@@ -2,12 +2,37 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
+     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app"></div>
+    <h2>
+      Introduction of Anime.Js
+    </h2>
+    <div style="background: green;
+      height: 30px;
+      width: 50px; margin: -1; overflow: hidden; padding: 0;clip: rect(0 0 0 0);">Test
+    </div>
+    <div class="scroll" id="mainScroll">TESTING</div>
+
+    <div class="groupElements" id="waterSurfaceGrouping">
+      <div class="water" id="waterLayer0"></div>
+      <div class="water" id="waterLayer1"></div>
+      <div class="narwhal" id="mainSubject"></div>
+      <div class="water" id="waterLayer2"></div>
+      <div class="water" id="waterLayer3"></div>
+      <div class="water" id="waterLayer4"></div>
+      <div class="water" id="waterLayer5"></div>
+      <div class="water" id="waterLayer6"></div>
+      <div class="water" id="waterLayer7"></div>
+      <div class="water" id="waterLayer8"></div>
+      <div class="water" id="waterLayer9"></div>
+    </div>
+    <div class="groupElements" id="bottomGrouping">
+      <div class="navBar" id="bottomNav"></div>
+    </div>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
