progress with positioning

--- a/project1/index.html
+++ b/project1/index.html
@@ -7,17 +7,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
   </head>
-  <body>
-    <h2>
+  <body>    
+    <div class="groupElements" id="test">
+      <div class="scroll" id="mainScroll">TESTING
+        <div class="fill">FILL</div>
+        <div class="fill">FILL</div>
+        <div class="fill">FILL</div>
+        <div class="fill">FILL</div>
+        <div class="fill">FILL</div>
+        <div class="fill">FILL</div>
+        <div class="fill">FILL</div>
+        <div class="fill">FILL</div>
+        <div class="fill">FILL</div>
+        <div class="fill">FILL</div>
+        <div class="fill">FILL</div>
+        <div class="fill">FILL</div>
+        <div class="fill">FILL</div>
+        <div class="fill">FILL</div>
+        <div class="fill">FILL</div>
+        <div class="fill">FILL</div>
+        <div class="fill">FILL</div>
+        <div class="fill">FILL</div>
+        <div class="fill">FILL</div>
+        <div class="fill">FILL</div>
+        <div class="fill">FILL</div>
+        <div class="fill">FILL</div>
+        <div class="fill">FILL</div>
+        <div class="fill">FILL</div>
+        <div class="fill">FILL</div>
+        <div class="fill">FILL</div>
+        <div class="fill">FILL</div>
+        <div class="fill">FILL</div>
+        <div class="fill">FILL</div>
+        <div class="fill">FILL</div>
+      </div>
+    </div>
+
+    <!-- <h2>
       Introduction of Anime.Js
     </h2>
     <div style="background: green;
       height: 30px;
       width: 50px; margin: -1; overflow: hidden; padding: 0;clip: rect(0 0 0 0);">Test
-    </div>
-    <div class="scroll" id="mainScroll">TESTING</div>
+    </div> -->
 
-    <div class="groupElements" id="waterSurfaceGrouping">
+    <!-- <div class="groupElements" id="waterSurfaceGrouping"> -->
       <div class="water" id="waterLayer0"></div>
       <div class="water" id="waterLayer1"></div>
       <div class="narwhal" id="mainSubject"></div>
@@ -29,7 +63,11 @@
       <div class="water" id="waterLayer7"></div>
       <div class="water" id="waterLayer8"></div>
       <div class="water" id="waterLayer9"></div>
-    </div>
+  <!-- </div> -->
+
+    
+
+      
     <div class="groupElements" id="bottomGrouping">
       <div class="navBar" id="bottomNav"></div>
     </div>
