--- a/project1/index.html
+++ b/project1/index.html
@@ -10,6 +10,7 @@
   <body>    
     <div class="groupElements" id="test">
       <div class="scroll" id="mainScroll">TESTING
+        <div class="infoBox" id="generalFacts">GENERAL FACTS</div>
         <div class="fill">FILL</div>
         <div class="fill">FILL</div>
         <div class="fill">FILL</div>
