--- a/project1/index.html
+++ b/project1/index.html
@@ -8,41 +8,7 @@
     <title>Vite App</title>
   </head>
   <body>    
-    <div class="groupElements" id="test">
-      <div class="scroll" id="mainScroll">TESTING
-        <div class="infoBox" id="generalFacts">GENERAL FACTS</div>
-        <div class="fill">FILL</div>
-        <div class="fill">FILL</div>
-        <div class="fill">FILL</div>
-        <div class="fill">FILL</div>
-        <div class="fill">FILL</div>
-        <div class="fill">FILL</div>
-        <div class="fill">FILL</div>
-        <div class="fill">FILL</div>
-        <div class="fill">FILL</div>
-        <div class="fill">FILL</div>
-        <div class="fill">FILL</div>
-        <div class="fill">FILL</div>
-        <div class="fill">FILL</div>
-        <div class="fill">FILL</div>
-        <div class="fill">FILL</div>
-        <div class="fill">FILL</div>
-        <div class="fill">FILL</div>
-        <div class="fill">FILL</div>
-        <div class="fill">FILL</div>
-        <div class="fill">FILL</div>
-        <div class="fill">FILL</div>
-        <div class="fill">FILL</div>
-        <div class="fill">FILL</div>
-        <div class="fill">FILL</div>
-        <div class="fill">FILL</div>
-        <div class="fill">FILL</div>
-        <div class="fill">FILL</div>
-        <div class="fill">FILL</div>
-        <div class="fill">FILL</div>
-        <div class="fill">FILL</div>
-      </div>
-    </div>
+    
 
     <!-- <h2>
       Introduction of Anime.Js
@@ -64,6 +30,55 @@
       <div class="water" id="waterLayer7"></div>
       <div class="water" id="waterLayer8"></div>
       <div class="water" id="waterLayer9"></div>
+
+
+      <div class="groupElements" id="test">
+        <div class="scroll" id="mainScroll">TESTING
+  
+          <div class="container" id="surfaceInfoTop">
+            <div class="infoBox" id="generalFacts">GENERAL FACTS</div>
+            <div class="infoBox" id="diets">DIETS</div>
+            <div class="infoBox" id="facts">FUN FACTS</div>
+          </div>
+  
+          <div class="container" id="surfaceInfoBottom">
+            <div class="infoBox" id="habitats">HABITATS & ENVIRONMENTS</div>
+            <div class="infoBox" id="threats">THREATS</div>
+            <div class="infoBox" id="references">REFERENCES</div>
+          </div>
+  
+          <div class="fill">FILL</div>
+          <div class="fill">FILL</div>
+          <div class="fill">FILL</div>
+          <div class="fill">FILL</div>
+          <div class="fill">FILL</div>
+          <div class="fill">FILL</div>
+          <div class="fill">FILL</div>
+          <div class="fill">FILL</div>
+          <div class="fill">FILL</div>
+          <div class="fill">FILL</div>
+          <div class="fill">FILL</div>
+          <div class="fill">FILL</div>
+          <div class="fill">FILL</div>
+          <div class="fill">FILL</div>
+          <div class="fill">FILL</div>
+          <div class="fill">FILL</div>
+          <div class="fill">FILL</div>
+          <div class="fill">FILL</div>
+          <div class="fill">FILL</div>
+          <div class="fill">FILL</div>
+          <div class="fill">FILL</div>
+          <div class="fill">FILL</div>
+          <div class="fill">FILL</div>
+          <div class="fill">FILL</div>
+          <div class="fill">FILL</div>
+          <div class="fill">FILL</div>
+          <div class="fill">FILL</div>
+          <div class="fill">FILL</div>
+          <div class="fill">FILL</div>
+          <div class="fill">FILL</div>
+        </div>
+      </div>
   <!-- </div> -->
 
     
