--- a/project1/index.html
+++ b/project1/index.html
@@ -88,5 +88,6 @@
       <div class="navBar" id="bottomNav"></div>
     </div>
     <script type="module" src="/main.js"></script>
+    <script src="anime.min.js"></script>
   </body>
 </html>
