added narwhalSwim animation & diving/surfacing animations

--- a/project1/index.html
+++ b/project1/index.html
@@ -21,8 +21,10 @@
     <!-- <div class="groupElements" id="waterSurfaceGrouping"> -->
       <div class="water" id="waterLayer0"></div>
       <div class="water" id="waterLayer1"></div>
-      <div class="narwhal" id="mainSubject"></div>
       <div class="water" id="waterLayer2"></div>
+      <div class="narwhal" id="mainSubject">
+        <img src="images/narwhalSwim.gif" alt="swimming narwhal gif" id="narwhalSwim"  width="250" alt="404 image"/>
+      </div>
       <div class="water" id="waterLayer3"></div>
       <div class="water" id="waterLayer4"></div>
       <div class="water" id="waterLayer5"></div>
@@ -30,6 +32,7 @@
       <div class="water" id="waterLayer7"></div>
       <div class="water" id="waterLayer8"></div>
       <div class="water" id="waterLayer9"></div>
+      <div class="water" id="underwater"></div>
 
 
       <div class="groupElements" id="test">
@@ -88,6 +91,6 @@
       <div class="navBar" id="bottomNav"></div>
     </div>
     <script type="module" src="/main.js"></script>
-    <script src="anime.min.js"></script>
+    <!-- <script src="anime.min.js"></script> -->
   </body>
 </html>
