added water images

--- a/project1/index.html
+++ b/project1/index.html
@@ -19,19 +19,39 @@
     </div> -->
 
     <!-- <div class="groupElements" id="waterSurfaceGrouping"> -->
-      <div class="water" id="waterLayer0"></div>
-      <div class="water" id="waterLayer1"></div>
-      <div class="water" id="waterLayer2"></div>
+      <div class="water" id="waterLayer0">
+        <img src="images/water9.png" alt="water body" class="waterImage"/>
+      </div>
+      <div class="water" id="waterLayer1">
+        <img src="images/water2.png" alt="water body" class="waterImage"/>
+      </div>
+      <div class="water" id="waterLayer2">
+        <img src="images/water1.png" alt="water body" class="waterImage"/>
+      </div>
       <div class="narwhal" id="mainSubject">
         <img src="images/narwhalSwim.gif" alt="swimming narwhal gif" id="narwhalSwim"  width="250" alt="404 image"/>
       </div>
-      <div class="water" id="waterLayer3"></div>
-      <div class="water" id="waterLayer4"></div>
-      <div class="water" id="waterLayer5"></div>
-      <div class="water" id="waterLayer6"></div>
-      <div class="water" id="waterLayer7"></div>
-      <div class="water" id="waterLayer8"></div>
-      <div class="water" id="waterLayer9"></div>
+      <div class="water" id="waterLayer3">
+        <img src="images/water10.png" alt="water body" class="waterImage"/>
+      </div>
+      <div class="water" id="waterLayer4">
+        <img src="images/water8.png" alt="water body" class="waterImage"/>
+      </div>
+      <div class="water" id="waterLayer5">
+        <img src="images/water6.png" alt="water body" class="waterImage"/>
+      </div>
+      <div class="water" id="waterLayer6">
+        <img src="images/water7.png" alt="water body" class="waterImage"/>
+      </div>
+      <div class="water" id="waterLayer7">
+        <img src="images/water5.png" alt="water body" class="waterImage"/>
+      </div>
+      <div class="water" id="waterLayer8">
+        <img src="images/water3.png" alt="water body" class="waterImage"/>
+      </div>
+      <div class="water" id="waterLayer9">
+        <img src="images/water0.png" alt="water body" class="waterImage"/>
+      </div>
       <div class="water" id="underwater"></div>
 
 
@@ -82,7 +102,7 @@
           <div class="fill">FILL</div>
         </div>
       </div>
-  <!-- </div> -->
+  </div>
 
     
 
@@ -91,6 +111,6 @@
       <div class="navBar" id="bottomNav"></div>
     </div>
     <script type="module" src="/main.js"></script>
-    <!-- <script src="anime.min.js"></script> -->
+    <script src="anime.min.js"></script>
   </body>
 </html>
