added swimming fish

--- a/project1/index.html
+++ b/project1/index.html
@@ -8,6 +8,15 @@
     <title>Narhwal Facts</title>
   </head>
   <body>
+    <div class="fish" id="fishSwim1">
+      <img src="images/fishSwim.gif" alt="swimming fish" id="fishSwim1" width="250">
+    </div>
+    <div class="fish" id="fishSwim2">
+      <img src="images/fishSwim.gif" alt="swimming fish" id="fishSwim2" width="250">
+    </div>
+    <div class="fish" id="fishSwim4">
+      <img src="images/fishSwim.gif" alt="swimming fish" id="fishSwim4" width="250">
+    </div>
     <div class="water" id="underwater"></div>
     <div class="water" id="waterLayer0">
       <img src="images/water1.png" alt="water body" class="waterImage" />
@@ -24,7 +33,6 @@
         alt="swimming narwhal gif"
         id="narwhalSwim"
         width="250"
-        alt="404 image"
       />
     </div>
     <div class="water" id="waterLayer3">
@@ -32,6 +40,17 @@
     </div>
     <div class="water" id="waterLayer4">
       <img src="images/water5.png" alt="water body" class="waterImage" />
+    </div>
+    <div class="narwhal" id="child1">
+      <img
+        src="images/narwhalSwim1.gif"
+        alt="swimming narwhal gif"
+        id="narwhalSwim1"
+        width="250"
+      />
+    </div>
+    <div class="fish" id="fishSwim3">
+      <img src="images/fishSwim.gif" alt="swimming fish" id="fishSwim3" width="250">
     </div>
     <div class="water" id="waterLayer5">
       <img src="images/water7.png" alt="water body" class="waterImage" />
@@ -51,24 +70,69 @@
 
     <div class="groupElements" id="test">
       <div class="scroll" id="mainScroll">
-        TESTING
+        <div class="container" id="infoTop">
+          <div class="infoBox" id="generalFacts">
+            <h3>What are Narwhals?</h3>
+            <p>Narwhals are medium-sized, toothed whales. Unlike other toothed whales, narwhals have no teeth in their mouths. Only males have a single long, straight tooth protruding from their upper left jaw.</p>
+            <p>Weigh up to 4200 pounds, they can grow up to 17 feet in length. Narhwals live up to 50 years on average, but some of the oldest ones are estimated to have reached 125 years.</p>
+          </div>
+          <div class="infoBox" id="diets">
+            <h3>Diets</h3>
+            <p>Narwhals are carnivores near the top of the food chain.</p>
+            <p>Their diets consist of Greenland halibut, Arctic cod, polar cod, squid and shrimp.</p>
+          </div>
+          <div class="infoBox" id="threats">
+            <h3>Threats to Narwhals</h3>
+            <p>They're currently not as risk. However, they are under special concerns and may become threatened/endangered due to biological characteristics or identified threats.</p>
+            <h4>Potential Threats:</h4>
+            <ul>
+              <li>Climate Change: As polar temperatures increase, ice-dependent species are at risk of decline.</li>
+              <p>For narwhals, sea ice is both their feeding ground and place of refuge. With its decrease, they lose their ability to hide from predators.</p>
+              <li>Shipping & Underwater Noise:</li>
+              <p>Whales depend on sound for communication. Noise pollution hinders thair ability to find food, mates, navigate, avoid predators, and nuture young. When large ships move into the area, they cause narwhals to move from their calving and feeding areas.</p>
+              <li>Predators: Natural predators such as killer whales and greenland sharks, but man is their main enemy.</li>
+              <p>Since some believe their tusks possess magical healing and aphrodisiac properties, they're illegally hunted.</p>
+            </ul>
+          </div>
+          <div class="infoBox" id="habitats">
+            <h3>Habitats</h3>
+            <p>Narwhals spend their lives in the Artic waters of Canada, Greenland, Norway, and Russia. Their migration paths closely follow the movement of loose pack ice.</p>
+            <p>During the winter, many migrate to the Baffin Bay-Davis Strait and spend five to seven months under sea ice. In the summer, they congregate in high Artic ice-free shallow bays and fjords to care for young.</p>
+          </div>
+          <div class="infoBox" id="facts">
+            <h3>Fun Facts</h3>
+            <ul>
+              <li>Nicknamed the "Unicorn of the Sea"</li>
+              <li>The myth of unicorns originated when european hunters brought back tusks with great stories about what they were attached to.</li>
+              <li>Famous for their "horn"</li>
+              <ul>
+                <li>It spirals counterclockwise and can reach up to nine/ten feet.</li>
+                <li>Some males have two tusks.</li>
+                <li>Tusks are used to establish dominance hierarchies and rank males within narwhal pods.</li>
+              </ul>
+              <li>Narwhals change color as they age. Newborns are blue-gray, juveniles are blue-black, and adults are mottled gray. Old narwhals are nearly all white.</li>
+              <li>Narwhals travel in groups of 15-20.</li>
+              <li>Narwhals can dive about a mile deep in the ocean. They pop up through cracks in sea ice for air.</li>
+            </ul>
+          </div>
+          <div class="infoBox" id="references">
+            <h3>References</h3>
+            <ul>
+              <li><a href="https://www.worldwildlife.org/species/narwhal">World Wild Life: Narwhal</a></li>
+              <li><a href="https://wwf.ca/species/narwhals/">World Wild Life Canada: Narwhal</a></li>
+              <li><a href="https://www.worldwildlife.org/stories/unicorn-of-the-sea-narwhal-facts">World Wild Life : Unicorn of the Sea</a></li>
+              <li><a href="https://www.nationalgeographic.com/animals/mammals/facts/narwhal">National Geographic: Narwhal</a></li>
+              <li><a href="https://seaworld.org/animals/facts/mammals/narwhal/">Sea World: Narwhal</a></li>
+              <li><a href="https://oceanexplorer.noaa.gov/facts/narwhal.html">Ocean Explorer: Narwhal</a></li>
+              <li><a href="https://www.ifaw.org/animals/narwhals">International Fund for Animal Welfare: Narwhal</a></li>
 
-        <div class="container" id="surfaceInfoTop">
-          <div class="infoBox" id="generalFacts">GENERAL FACTS</div>
-          <div class="infoBox" id="diets">DIETS</div>
-          <div class="infoBox" id="facts">FUN FACTS</div>
-        </div>
-
-        <div class="container" id="surfaceInfoBottom">
-          <div class="infoBox" id="habitats">HABITATS & ENVIRONMENTS</div>
-          <div class="infoBox" id="threats">THREATS</div>
-          <div class="infoBox" id="references">REFERENCES</div>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
 
     <div class="groupElements" id="bottomGrouping">
-      <!-- <div class="navBar" id="bottomNav"> -->
       <input
         class="progress"
         step=".001"
@@ -77,9 +141,7 @@
         max="100"
         value="0"
       />
-      <!-- </div> -->
     </div>
     <script type="module" src="/main.js"></script>
-    <!-- <script src="anime.min.js"></script> -->
   </body>
 </html>
