push fish swimming changes

--- a/project1/index.html
+++ b/project1/index.html
@@ -9,10 +9,10 @@
   </head>
   <body>
     <div class="fish" id="fishSwim1">
-      <img src="images/fishSwim.gif" alt="swimming fish" id="fishSwim1" width="250">
+      <img src="images/fishSwim1.gif" alt="swimming fish" id="fishSwim1" width="250">
     </div>
     <div class="fish" id="fishSwim2">
-      <img src="images/fishSwim.gif" alt="swimming fish" id="fishSwim2" width="250">
+      <img src="images/fishSwim1.gif" alt="swimming fish" id="fishSwim2" width="250">
     </div>
     <div class="fish" id="fishSwim4">
       <img src="images/fishSwim.gif" alt="swimming fish" id="fishSwim4" width="250">
