added turn screen notification

--- a/project1/index.html
+++ b/project1/index.html
@@ -142,6 +142,7 @@
         value="0"
       />
     </div>
+    <div class="error" id="errorBox">Please rotate your device or increase the width of the screen.</div>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
