added control tracker and title

--- a/project1/index.html
+++ b/project1/index.html
@@ -71,6 +71,9 @@
     <div class="groupElements" id="test">
       <div class="scroll" id="mainScroll">
         <div class="container" id="infoTop">
+          <div class="infoBox" id="title">
+            About Narwhals
+          </div>
           <div class="infoBox" id="generalFacts">
             <h3>What are Narwhals?</h3>
             <p>Narwhals are medium-sized, toothed whales. Unlike other toothed whales, narwhals have no teeth in their mouths. Only males have a single long, straight tooth protruding from their upper left jaw.</p>
@@ -133,6 +136,7 @@
     </div>
 
     <div class="groupElements" id="bottomGrouping">
+      <div class="control" id="controlStatus">PAUSED</div>
       <input
         class="progress"
         step=".001"
@@ -141,6 +145,7 @@
         max="100"
         value="0"
       />
+      
     </div>
     <script type="module" src="/main.js"></script>
   </body>
